--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 
 .nav-bar {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1.4fr 1fr;
   align-items: center;
   height: 7.2rem;
   padding: 0 3.2rem;
@@ -96,12 +96,20 @@ body {
   padding: 1.1rem 1.6rem;
   font-size: 1.8rem;
   border-radius: 0.7rem;
-  width: 40rem;
+  width: 30rem;
   transition: all 0.3s;
   color: var(--color-text);
 
   /* background-color: var(--color-background-900); */
   background-color: var(--color-primary-light);
+}
+
+.search-btn {
+  border: none;
+  padding: 1.1rem 1.6rem;
+  font-size: 1.8rem;
+  background-color: var(--color-primary);
+  cursor: pointer;
 }
 
 .search::placeholder {
